--- a/keshi.html
+++ b/keshi.html
@@ -11,7 +11,7 @@
     <body id="kbody">
         <div id="kdiv">
             <img id="keshiTxt" src="assets/keshi/text.png" alt="text">
-            <video autoplay muted src="assets/keshi/soft_spot.mov"></video>
+            <video autoplay muted src="assets/keshi/soft_spot1.mov"></video>
             <audio id="song" src="assets/keshi/audio_trimmed.mp3"></audio>
             <img id="yay" src="assets/keshi/yay.png" alt="yay">
             <h2 id="msg1">ok thats it bebe, I love you baby hope you had fun</h2>
