--- a/yes.html
+++ b/yes.html
@@ -10,7 +10,7 @@
 <html>
     <body>
         <video autoplay muted loop id="yesmov">
-            <source src="assets/yes.mov" type="video/mp4">
+            <source src="assets/yes2.mov" type="video/mp4">
         </video>
 
         <div id="yesContent">
