--- a/heybebe.html
+++ b/heybebe.html
@@ -28,7 +28,7 @@
             const images = [
                 'assets/bright.jpg',
                 'assets/cheeky.jpg',
-                'assets/kid.jpg',
+                'assets/kid.JPG',
                 'assets/sad.jpg',
                 'assets/side_eye.jpg',
                 'assets/me.jpg',
