--- a/heybebe.html
+++ b/heybebe.html
@@ -8,7 +8,7 @@
 </head>
 
 <html>
-    <body>
+    <body id="heybody">
         <video autoplay muted loop id="bg_video">
             <source src="assets/heart.mov" type="video/mp4">
         </video>
